--- a/theme/[pisos].html
+++ b/theme/[pisos].html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f362e2114c95" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
+<html data-wf-page="609b09e44168f362e2114c95" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
   <meta charset="utf-8">
-  
+  <title>Copy of Europisos v2 (sin fibra de vidrio macetas)</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/europisos-v2-8242e23c56fba3ffb7fa403b06.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.png" }}" rel="shortcut icon" type="image/x-icon">
   <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.png" }}" rel="apple-touch-icon">
@@ -27,15 +28,77 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-{{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
+{{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<meta property="og:title" content="Copy of Europisos v2 (sin fibra de vidrio macetas)"><meta property="twitter:title" content="Copy of Europisos v2 (sin fibra de vidrio macetas)"><style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
         }</style><style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
         display: inline-block; }</style></head>
 <body>
-  {%- include "partials/menu" -%}
-  <div class="section-producto-catalogo wf-section">
+  <div class="menu">
+    <div class="w-embed w-iframe">
+      <!--  Google Tag Manager (noscript)  -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!--  End Google Tag Manager (noscript)  -->
+    </div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+      <div class="div-block-12">
+        <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
+        </a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <div class="div-block-13">
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.-824a8b9 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.6451f65d }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.3d2ce2b8 }}" class="dropdown-link w-dropdown-link">{{ texts.6176fac4 }}</a>
+                <a href="{{ links.-47a2312a }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-5f7c817c }}" class="dropdown-link w-dropdown-link">{{ texts.37bce494 }}</a>
+                <a href="{{ links.-33d9e40b }}" class="dropdown-link w-dropdown-link">{{ texts.46cbae7 }}</a>
+                <a href="{{ links.7700ae4e }}" class="dropdown-link w-dropdown-link">{{ texts.-339acbad }}</a>
+                <a href="{{ links.-3ef94968 }}" class="dropdown-link w-dropdown-link">{{ texts.-18947bda }}</a>
+              </nav>
+            </div>
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.66a76574 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.3eda8ca }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.-637fe9a4 }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-4e232277 }}" class="dropdown-link w-dropdown-link">{{ texts.3cfcd46 }}</a>
+                <a href="{{ links.380712 }}" class="dropdown-link w-dropdown-link">{{ texts.33226165 }}</a>
+                <a href="{{ links.60fec55c }}" class="dropdown-link w-dropdown-link">{{ texts.-7cd47973 }}</a>
+              </nav>
+            </div>
+            <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
+            <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
+            <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
+            <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
+            <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+          </div>
+          <div class="nav-menu-right">
+            <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
+            <a href="{{ links.768ad3ac }}" class="telefono">{{ texts.-70c0b1fd }}</a>
+          </div>
+        </nav>
+        <div class="menu-button w-nav-button">
+          <div class="con-menu-servicios">
+            <div>{{ texts.-657ae5c3 }}</div>
+            <div class="icon-4 w-icon-nav-menu"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section-producto-catalogo">
     <div class="w-layout-grid grid-catalogo-producto">
       <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a564-e2114c95" class="div-block-20">
         <h1 class="titulo-catalogo-producto">{{ title }}</h1>
@@ -66,12 +129,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <h2 class="heading-solicitar-cotizaci-n">{{ texts.1cd7f23b }}</h2>
         <div no-ajax="true" class="formulario-piso w-form">
-          <form id="wf-form-Formulario" name="wf-form-Formulario" data-name="ulario" action="https://formbucket.com/f/buk_CmvIDiUbZcB7Ad7m8bWap0Vc" method="post" class="form-asesoria">
-            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a577-e2114c95"><label for="Nombre-2" class="field-label-2">{{ texts.-1e41be8f }}</label><input type="text" class="text-field-2 w-input" maxlength="256" name="Nombre-2" data-name="Nombre 2" placeholder="" id="Nombre-2" required=""></div>
-            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a57b-e2114c95"><label for="Correo" class="field-label-2">{{ texts.7708558d }}</label><input type="email" class="text-field-2 w-input" maxlength="256" name="Correo" data-name="Correo" placeholder="" id="Correo" required=""></div>
-            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a57f-e2114c95"><label for="Telefono" class="field-label-2">{{ texts.-24e37236 }}<span class="_10-digitos"></span>{{ texts.3a }}</label><input type="tel" class="text-field-2 w-input" maxlength="256" name="Telefono" data-name="Telefono" placeholder="" id="Telefono" required=""></div>
-            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a586-e2114c95"><label for="Ciudad" class="field-label-2">{{ texts.-6df1f93e }}</label><input type="text" class="text-field-2 w-input" maxlength="256" name="Ciudad-2" data-name="Ciudad 2" placeholder="" id="Ciudad-2" required=""></div>
-            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a58a-e2114c95"><label for="Metros-a-cubrir" class="field-label-2">{{ texts.2bab852e }}</label><input type="text" class="text-field-2 w-input" maxlength="256" name="Metros-a-cubrir-2" data-name="Metros A Cubrir 2" placeholder="" id="Metros-a-cubrir-2"><label for="Mensaje-2" class="field-label-2">{{ texts.-2038caa5 }}</label><textarea id="Mensaje-2" name="Mensaje-2" maxlength="5000" data-name="Mensaje 2" placeholder="" class="text-field-2 w-input"></textarea>
+          <form id="wf-form-Formulario" name="wf-form-Formulario" data-name="ulario" action="https://formbucket.com/f/buk_CmvIDiUbZcB7Ad7m8bWap0Vc" method="post" class="form-asesoria" data-wf-page-id="609b09e44168f362e2114c95" data-wf-element-id="70786581-a769-fe2c-77a7-e8e41c16a576">
+            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a577-e2114c95"><label for="Nombre-2" class="field-label-2">{{ texts.-1e41be8f }}</label><input class="text-field-2 w-input" maxlength="256" name="Nombre-2" data-name="Nombre 2" placeholder="" type="text" id="Nombre-2" required=""></div>
+            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a57b-e2114c95"><label for="Correo" class="field-label-2">{{ texts.7708558d }}</label><input class="text-field-2 w-input" maxlength="256" name="Correo" data-name="Correo" placeholder="" type="email" id="Correo" required=""></div>
+            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a57f-e2114c95"><label for="Telefono" class="field-label-2">{{ texts.-24e37236 }}<span class="_10-digitos"></span>{{ texts.3a }}</label><input class="text-field-2 w-input" maxlength="256" name="Telefono" data-name="Telefono" placeholder="" type="tel" id="Telefono" required=""></div>
+            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a586-e2114c95"><label for="Ciudad" class="field-label-2">{{ texts.-6df1f93e }}</label><input class="text-field-2 w-input" maxlength="256" name="Ciudad-2" data-name="Ciudad 2" placeholder="" type="text" id="Ciudad-2" required=""></div>
+            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a58a-e2114c95"><label for="Metros-a-cubrir" class="field-label-2">{{ texts.2bab852e }}</label><input class="text-field-2 w-input" maxlength="256" name="Metros-a-cubrir-2" data-name="Metros A Cubrir 2" placeholder="" type="text" id="Metros-a-cubrir-2"><label for="Mensaje-2" class="field-label-2">{{ texts.-2038caa5 }}</label><textarea id="Mensaje-2" name="Mensaje-2" maxlength="5000" data-name="Mensaje 2" placeholder="" class="text-field-2 w-input"></textarea>
               <div class="w-embed"><input type="hidden" id="url" name="url" value=""></div>
               <div class="embed-recaptcha">
                 <div class="html-embed w-embed w-script">
@@ -87,7 +150,7 @@ function validateRecaptcha() {
 </script>
                 </div>
               </div>
-            </div><input type="submit" value="Solicitar cotización" data-wait="Un momento..." id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a592-e2114c95" class="boton-2 w-button">
+            </div><input type="submit" data-wait="Un momento..." id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a592-e2114c95" class="boton-2 w-button" value="Solicitar cotización">
           </form>
           <div class="w-form-done">
             <div>{{ texts.-6065ad13 }}</div>
@@ -98,10 +161,10 @@ function validateRecaptcha() {
         </div>
       </div>
       <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a599-e2114c95">
-        <div class="imagen-thumbnail-piso">{%- image f_foto-principal-de-producto.url, f_foto-principal-de-producto.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"97vw"},{"max":10000,"size":"98vw"}]', 'class="image-6"' -%}</div>
+        <div class="imagen-thumbnail-piso">{%- image images.0.url, images.0.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"97vw"},{"max":10000,"size":"98vw"}]', 'class="image-6 w-dyn-bind-empty"' -%}</div>
       </div>
     </div>
-    {%- assign collection = collections.categoria -%}<div class="w-dyn-list">
+    {%- assign collection = collections.categoria | sort: "-created-on" -%}<div class="w-dyn-list">
       {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo w-dyn-items">
         {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-catalogo w-dyn-item">
           <a href="{{ item.url }}" class="link-block-5link-block-5 w-inline-block">
@@ -118,10 +181,48 @@ function validateRecaptcha() {
       </div>{%- endif -%}
     </div>
   </div>
-  {%- include "partials/footer" -%}
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
+  <div class="footer">
+    <div class="row w-row">
+      <div class="column w-col w-col-4">
+        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+          <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
+        </div>
+      </div>
+      <div class="w-col w-col-3">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.-6beb6ac0 }}</div>
+          <a href="{{ links.-824a8b9 }}" class="link-footer">{{ texts.6451f65d }}</a>
+          <a href="{{ links.66a76574 }}" class="link-footer">{{ texts.3eda8ca }}</a>
+          <a href="{{ links.-5c8c85ba }}" class="link-footer">{{ texts.37bce494 }}</a>
+          <a href="{{ links.-32cd245 }}" class="link-footer">{{ texts.-1dca6e3f }}</a>
+          <a href="{{ links.-343edc94 }}" class="link-footer">{{ texts.68fb3ac9 }}</a>
+          <a href="{{ links.-4a5cfeee }}" class="link-footer">{{ texts.-48d59d5c }}</a>
+          <a href="{{ links.519f0497 }}" class="link-footer">{{ texts.-797026b7 }}</a>
+          <a href="{{ links.44597e49 }}" class="link-footer">{{ texts.-18947bda }}</a>
+        </div>
+      </div>
+      <div class="w-col w-col-5">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.5401f5bf }}</div>
+          <a href="{{ links.768ad3ac }}" class="link-footer-telefono">{{ texts.-70c0b1fd }}</a>
+          <div class="text-block-1">{{ texts.7708558d }}</div>
+          <a href="{{ links.3ce9a87c }}" class="link-footer-telefono">{{ texts.16679d29 }}</a>
+          <div class="text-block-1">{{ texts.78bcd6e2 }}</div>
+          <a href="{{ links.23 }}" class="link-footer">{{ texts.-ed7a307 }}</a>
+          <a href="{{ links.-4886a790 }}" target="_blank" rel="noreferrer" class="link-footer small-underline">{{ texts.-6e2fc850 }}</a>
+        </div>
+      </div>
+    </div>
+    <div class="div-text-footer-rr">
+      <div class="text-footer-rr">{{ texts.-50284710 }}</div>
+      <a href="{{ links.-b70c173 }}" rel="noopener" target="_blank" class="text-footer-rr">{{ texts.-2df564eb }}</a>
+    </div>
+    <div class="div-footer-boton">
+      <a href="{{ links.-3f05918f }}" class="contacto">{{ texts.-1df83b91 }}</a>
+    </div>
+  </div>
+  <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script>
   (function getURL() {
   let input = document.getElementById("url");
