--- a/theme/contacto.html
+++ b/theme/contacto.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f37e30114c91" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
+<html data-wf-page="609b09e44168f37e30114c91" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
   <meta charset="utf-8">
-  
-  
-  
-  
-  
-  
-  
-  
+  <title>Contacto</title>
+  <meta content="Cotizamos su proyecto sin ningún compromiso: Pérgolas, Decks, Pisos de madera, Saunas, Carpintería en Guadalajara, Zapopan, México." name="description">
+  <meta content="Contacto" property="og:title">
+  <meta content="Cotizamos su proyecto sin ningún compromiso: Pérgolas, Decks, Pisos de madera, Saunas, Carpintería en Guadalajara, Zapopan, México." property="og:description">
+  <meta content="Contacto" property="twitter:title">
+  <meta content="Cotizamos su proyecto sin ningún compromiso: Pérgolas, Decks, Pisos de madera, Saunas, Carpintería en Guadalajara, Zapopan, México." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/europisos-v2-8242e23c56fba3ffb7fa403b06.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.png" }}" rel="shortcut icon" type="image/x-icon">
   <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.png" }}" rel="apple-touch-icon">
@@ -42,14 +43,76 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         vertical-align: middle;
         display: inline-block; }</style></head>
 <body>
-  {%- include "partials/menu" -%}
-  <div id="decksdemadera" class="section-contacto wf-section">
+  <div class="menu">
+    <div class="w-embed w-iframe">
+      <!--  Google Tag Manager (noscript)  -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!--  End Google Tag Manager (noscript)  -->
+    </div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+      <div class="div-block-12">
+        <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
+        </a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <div class="div-block-13">
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.-824a8b9 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.6451f65d }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.3d2ce2b8 }}" class="dropdown-link w-dropdown-link">{{ texts.6176fac4 }}</a>
+                <a href="{{ links.-47a2312a }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-5f7c817c }}" class="dropdown-link w-dropdown-link">{{ texts.37bce494 }}</a>
+                <a href="{{ links.-33d9e40b }}" class="dropdown-link w-dropdown-link">{{ texts.46cbae7 }}</a>
+                <a href="{{ links.7700ae4e }}" class="dropdown-link w-dropdown-link">{{ texts.-339acbad }}</a>
+                <a href="{{ links.-3ef94968 }}" class="dropdown-link w-dropdown-link">{{ texts.-18947bda }}</a>
+              </nav>
+            </div>
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.66a76574 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.3eda8ca }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.-637fe9a4 }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-4e232277 }}" class="dropdown-link w-dropdown-link">{{ texts.3cfcd46 }}</a>
+                <a href="{{ links.380712 }}" class="dropdown-link w-dropdown-link">{{ texts.33226165 }}</a>
+                <a href="{{ links.60fec55c }}" class="dropdown-link w-dropdown-link">{{ texts.-7cd47973 }}</a>
+              </nav>
+            </div>
+            <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
+            <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
+            <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
+            <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
+            <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+          </div>
+          <div class="nav-menu-right">
+            <a href="{{ links.-3f05918f }}" aria-current="page" class="contacto-header w--current">{{ texts.-1df83b91 }}</a>
+            <a href="{{ links.768ad3ac }}" class="telefono">{{ texts.-70c0b1fd }}</a>
+          </div>
+        </nav>
+        <div class="menu-button w-nav-button">
+          <div class="con-menu-servicios">
+            <div>{{ texts.-657ae5c3 }}</div>
+            <div class="icon-4 w-icon-nav-menu"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="decksdemadera" class="section-contacto">
     <div class="div-container horizontal">
       <div class="div-50">
         <h1 class="heading-h1">{{ texts.-1df83b91 }}</h1>
         <p class="paragraph dark medium center">{{ texts.4c499292 }}</p>
         <div no-ajax="true" class="form-block w-form">
-          <form id="wf-form-Formulario" name="wf-form-Formulario" data-name="ulario" action="https://formbucket.com/f/buk_CmvIDiUbZcB7Ad7m8bWap0Vc" method="post"><label for="Nombre-3" class="paragraph">{{ texts.5609e9b3 }}</label><input type="text" class="text-field w-input" maxlength="256" name="Nombre" data-name="Nombre" placeholder="" id="Nombre-3"><label for="Correo-3" class="paragraph">{{ texts.6a025917 }}</label><input type="email" class="text-field w-input" maxlength="256" name="Correo" data-name="Correo" placeholder="" id="Correo-3" required=""><label for="Celular" class="paragraph">{{ texts.5dcc7d8a }}</label><input type="tel" class="text-field w-input" maxlength="256" name="Celular" data-name="Celular" placeholder="" id="Celular"><label for="Estado-Y-Ciudad-4" class="paragraph"><strong>{{ texts.-4591a97 }}</strong></label><label for="Interes-2" class="paragraph">{{ texts.-3d3ece5 }}</label><select id="Interes-2" name="Interes" data-name="Interes" required="" class="w-select">
+          <form id="wf-form-Formulario" name="wf-form-Formulario" data-name="ulario" action="https://formbucket.com/f/buk_CmvIDiUbZcB7Ad7m8bWap0Vc" method="post" data-wf-page-id="609b09e44168f37e30114c91" data-wf-element-id="d672a5cd-1833-6097-60ca-7c738edaa5b8"><label for="Nombre-3" class="paragraph">{{ texts.5609e9b3 }}</label><input class="text-field w-input" maxlength="256" name="Nombre" data-name="Nombre" placeholder="" type="text" id="Nombre-3"><label for="Correo-3" class="paragraph">{{ texts.6a025917 }}</label><input class="text-field w-input" maxlength="256" name="Correo" data-name="Correo" placeholder="" type="email" id="Correo-3" required=""><label for="Celular" class="paragraph">{{ texts.5dcc7d8a }}</label><input class="text-field w-input" maxlength="256" name="Celular" data-name="Celular" placeholder="" type="tel" id="Celular"><label for="Estado-Y-Ciudad-4" class="paragraph"><strong>{{ texts.-4591a97 }}</strong></label><label for="Interes-2" class="paragraph">{{ texts.-3d3ece5 }}</label><select id="Interes-2" name="Interes" data-name="Interes" required="" class="w-select">
               <option value="Piso de madera">{{ texts.39113658 }}</option>
               <option value="Pergolado">{{ texts.-6a2e4f1b }}</option>
               <option value="Second">{{ texts.3c4172cd }}</option>
@@ -60,7 +123,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <option value="Fibra de vidrio">{{ texts.37bce494 }}</option>
               <option value="Muro verde">{{ texts.-533f0677 }}</option>
               <option value="Otro">{{ texts.25ab02 }}</option>
-            </select><label for="Superficie" class="paragraph">{{ texts.-3ada762e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Superficie" data-name="Superficie" placeholder="" id="Superficie"><label for="Ciudad" class="paragraph">{{ texts.78530878 }}</label><input type="text" class="text-field w-input" maxlength="256" name="Ciudad" data-name="Ciudad" placeholder="" id="Ciudad"><label for="Codigo-postal" class="paragraph">{{ texts.29c3690e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Codigo-postal" data-name="Codigo postal" placeholder="" id="Codigo-postal"><label for="Mensaje-3" class="paragraph">{{ texts.-15f69c }}</label><textarea id="Mensaje-2" name="Mensaje-2" maxlength="5000" data-name="Mensaje 2" placeholder="" class="text-field w-input"></textarea><input type="text" class="bucket-field w-input" maxlength="256" name="bucket" data-name="bucket" placeholder="" id="bucket-id">
+            </select><label for="Superficie" class="paragraph">{{ texts.-3ada762e }}</label><input class="text-field w-input" maxlength="256" name="Superficie" data-name="Superficie" placeholder="" type="text" id="Superficie"><label for="Ciudad" class="paragraph">{{ texts.78530878 }}</label><input class="text-field w-input" maxlength="256" name="Ciudad" data-name="Ciudad" placeholder="" type="text" id="Ciudad"><label for="Codigo-postal" class="paragraph">{{ texts.29c3690e }}</label><input class="text-field w-input" maxlength="256" name="Codigo-postal" data-name="Codigo postal" placeholder="" type="text" id="Codigo-postal"><label for="Mensaje-3" class="paragraph">{{ texts.-15f69c }}</label><textarea id="Mensaje-2" name="Mensaje-2" maxlength="5000" data-name="Mensaje 2" placeholder="" class="text-field w-input"></textarea><input class="bucket-field w-input" maxlength="256" name="bucket" data-name="bucket" placeholder="" type="text" id="bucket-id">
             <div class="embed-recaptcha">
               <div class="html-embed w-embed w-script">
                 <div class="g-recaptcha" data-sitekey="6LfZp9wUAAAAAElN6hjxGC8JFb3-WClC5dZnz7dZ"></div>
@@ -74,7 +137,7 @@ function validateRecaptcha() {
 }
 </script>
               </div>
-            </div><input type="submit" value="Enviar formulario" data-wait="Un momento" class="boton-naranja full-width w-button">
+            </div><input type="submit" data-wait="Un momento" class="boton-naranja full-width w-button" value="Enviar formulario">
           </form>
           <div class="w-form-done">
             <div>{{ texts.-6065ad13 }}</div>
@@ -111,9 +174,47 @@ function validateRecaptcha() {
       </div>
     </div>
   </div>
-  {%- include "partials/footer" -%}
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
+  <div class="footer">
+    <div class="row w-row">
+      <div class="column w-col w-col-4">
+        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+          <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
+        </div>
+      </div>
+      <div class="w-col w-col-3">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.-6beb6ac0 }}</div>
+          <a href="{{ links.-824a8b9 }}" class="link-footer">{{ texts.6451f65d }}</a>
+          <a href="{{ links.66a76574 }}" class="link-footer">{{ texts.3eda8ca }}</a>
+          <a href="{{ links.-5c8c85ba }}" class="link-footer">{{ texts.37bce494 }}</a>
+          <a href="{{ links.-32cd245 }}" class="link-footer">{{ texts.-1dca6e3f }}</a>
+          <a href="{{ links.-343edc94 }}" class="link-footer">{{ texts.68fb3ac9 }}</a>
+          <a href="{{ links.-4a5cfeee }}" class="link-footer">{{ texts.-48d59d5c }}</a>
+          <a href="{{ links.519f0497 }}" class="link-footer">{{ texts.-797026b7 }}</a>
+          <a href="{{ links.44597e49 }}" class="link-footer">{{ texts.-18947bda }}</a>
+        </div>
+      </div>
+      <div class="w-col w-col-5">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.5401f5bf }}</div>
+          <a href="{{ links.768ad3ac }}" class="link-footer-telefono">{{ texts.-70c0b1fd }}</a>
+          <div class="text-block-1">{{ texts.7708558d }}</div>
+          <a href="{{ links.3ce9a87c }}" class="link-footer-telefono">{{ texts.16679d29 }}</a>
+          <div class="text-block-1">{{ texts.78bcd6e2 }}</div>
+          <a href="{{ links.23 }}" class="link-footer">{{ texts.-ed7a307 }}</a>
+          <a href="{{ links.-4886a790 }}" target="_blank" rel="noreferrer" class="link-footer small-underline">{{ texts.-6e2fc850 }}</a>
+        </div>
+      </div>
+    </div>
+    <div class="div-text-footer-rr">
+      <div class="text-footer-rr">{{ texts.-50284710 }}</div>
+      <a href="{{ links.-b70c173 }}" rel="noopener" target="_blank" class="text-footer-rr">{{ texts.-2df564eb }}</a>
+    </div>
+    <div class="div-footer-boton">
+      <a href="{{ links.-3f05918f }}" aria-current="page" class="contacto w--current">{{ texts.-1df83b91 }}</a>
+    </div>
+  </div>
+  <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 
 <script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
