--- a/theme/decks.html
+++ b/theme/decks.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f344dc114c93" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
+<html data-wf-page="609b09e44168f344dc114c93" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
   <meta charset="utf-8">
-  
-  
-  
-  
-  
-  
-  
-  
+  <title>Decks de madera, sintético y bambú</title>
+  <meta content="Diseño e instalación de decks de madera. Ayudamos a seleccionar la mejor madera según sus gustos. Expertos en orrecta instalación y mantenimiento de todo tipo de deck para exteriores" name="description">
+  <meta content="Decks de madera, sintético y bambú" property="og:title">
+  <meta content="Diseño e instalación de decks de madera. Ayudamos a seleccionar la mejor madera según sus gustos. Expertos en orrecta instalación y mantenimiento de todo tipo de deck para exteriores" property="og:description">
+  <meta content="Decks de madera, sintético y bambú" property="twitter:title">
+  <meta content="Diseño e instalación de decks de madera. Ayudamos a seleccionar la mejor madera según sus gustos. Expertos en orrecta instalación y mantenimiento de todo tipo de deck para exteriores" property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/europisos-v2-8242e23c56fba3ffb7fa403b06.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.png" }}" rel="shortcut icon" type="image/x-icon">
   <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.png" }}" rel="apple-touch-icon">
@@ -42,8 +43,70 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         vertical-align: middle;
         display: inline-block; }</style></head>
 <body>
-  {%- include "partials/menu" -%}
-  <div class="section-header-1 wf-section">
+  <div class="menu">
+    <div class="w-embed w-iframe">
+      <!--  Google Tag Manager (noscript)  -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!--  End Google Tag Manager (noscript)  -->
+    </div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+      <div class="div-block-12">
+        <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
+        </a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <div class="div-block-13">
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.-824a8b9 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.6451f65d }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.3d2ce2b8 }}" class="dropdown-link w-dropdown-link">{{ texts.6176fac4 }}</a>
+                <a href="{{ links.-47a2312a }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-5f7c817c }}" class="dropdown-link w-dropdown-link">{{ texts.37bce494 }}</a>
+                <a href="{{ links.-33d9e40b }}" class="dropdown-link w-dropdown-link">{{ texts.46cbae7 }}</a>
+                <a href="{{ links.7700ae4e }}" class="dropdown-link w-dropdown-link">{{ texts.-339acbad }}</a>
+                <a href="{{ links.-3ef94968 }}" class="dropdown-link w-dropdown-link">{{ texts.-18947bda }}</a>
+              </nav>
+            </div>
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.66a76574 }}" aria-current="page" class="link-block-4 w-inline-block w--current">
+                  <div class="nav-link-dropdown light">{{ texts.3eda8ca }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.-637fe9a4 }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-4e232277 }}" class="dropdown-link w-dropdown-link">{{ texts.3cfcd46 }}</a>
+                <a href="{{ links.380712 }}" class="dropdown-link w-dropdown-link">{{ texts.33226165 }}</a>
+                <a href="{{ links.60fec55c }}" class="dropdown-link w-dropdown-link">{{ texts.-7cd47973 }}</a>
+              </nav>
+            </div>
+            <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
+            <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
+            <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
+            <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
+            <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+          </div>
+          <div class="nav-menu-right">
+            <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
+            <a href="{{ links.768ad3ac }}" class="telefono">{{ texts.-70c0b1fd }}</a>
+          </div>
+        </nav>
+        <div class="menu-button w-nav-button">
+          <div class="con-menu-servicios">
+            <div>{{ texts.-657ae5c3 }}</div>
+            <div class="icon-4 w-icon-nav-menu"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section-header-1">
     <div class="header-relative-container">
       <div data-delay="3500" data-animation="cross" class="slider-3 w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="1500" data-infinite="true">
         <div class="w-slider-mask">
@@ -70,7 +133,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div id="decks" class="section-decks wf-section">
+  <div id="decks" class="section-decks">
     <div class="div-block-9">
       <div class="w-container">
         <h2 class="heading-2 center">{{ texts.1df0b2c5 }}</h2>
@@ -130,7 +193,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div id="deckmadera" class="section-decksdemadera wf-section">
+  <div id="deckmadera" class="section-decksdemadera">
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.19f287ec }}</h2>
       <p class="paragraph dark big center">{{ texts.-13dd06d9 }}<br>{{ texts.76652456 }}</p>
@@ -173,7 +236,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div id="deckbambu" class="section-deck-bambu wf-section">
+  <div id="deckbambu" class="section-deck-bambu">
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.4a8dfa7e }}</h2>
       <p class="paragraph dark big center">{{ texts.-28d810cb }}</p>
@@ -182,7 +245,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark medium center">{{ texts.-4b659361 }}</p>{%- image images.-427b5ae9.url, images.-427b5ae9.alt, '[{"max":479,"size":"86vw"},{"max":991,"size":"88vw"},{"max":10000,"size":"762px"}]', 'class="deck-bambu-img"' -%}
     </div>
   </div>
-  <div id="decksintetico" class="section-decks-sinteticos wf-section">
+  <div id="decksintetico" class="section-decks-sinteticos">
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.-1b34fbd }}</h2>
       <p class="paragraph dark big center">{{ texts.747d677e }}</p>
@@ -235,7 +298,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div id="revestimientos" class="section-decks-sinteticos wf-section">
+  <div id="revestimientos" class="section-decks-sinteticos">
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.325cb317 }}</h2>
       <p class="paragraph dark medium center">{{ texts.205d841 }}<br>{{ texts.49a4fb4e }}</p>
@@ -246,29 +309,67 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"revestimiento-galeria-5.jpg","fileName":"revestimiento-galeria-5.jpg","fileSize":135996,"height":803,"url":"/assets/images/revestimiento-galeria-5.jpg","width":1440,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-4.jpg","fileName":"revestimiento-galeria-4.jpg","fileSize":88648,"height":804,"url":"/assets/images/revestimiento-galeria-4.jpg","width":1440,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-3.jpg","fileName":"revestimiento-galeria-3.jpg","fileSize":122060,"height":882,"url":"/assets/images/revestimiento-galeria-3.jpg","width":918,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-2.jpg","fileName":"revestimiento-galeria-2.jpg","fileSize":91759,"height":872,"url":"/assets/images/revestimiento-galeria-2.jpg","width":753,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-1.jpg","fileName":"revestimiento-galeria-1.jpg","fileSize":79865,"height":869,"url":"/assets/images/revestimiento-galeria-1.jpg","width":963,"type":"image"}],"group":""}</script>
       </a>
       <h3 class="center">{{ texts.-4064ce53 }}</h3>
-      <a href="{{ links.16bdc17e }}" class="boton w-button">{{ texts.-1df83b91 }}</a>
+      <a href="{{ links.-3f05918f }}" class="boton w-button">{{ texts.-1df83b91 }}</a>
     </div>
   </div>
-  <div id="decksintetico" class="section-automatizacion wf-section">
+  <div id="decksintetico" class="section-automatizacion">
     <div class="div-container">
       <h2 class="center">{{ texts.416fdc3a }}</h2>
       <p class="paragraph dark big center">{{ texts.-1e2b1b71 }}</p>
       <a href="{{ links.23 }}" class="lightbox-video w-inline-block w-lightbox">{%- image images.13051060.url, images.13051060.alt, '[{"max":479,"size":"100vw"},{"max":767,"size":"96vw"},{"max":10000,"size":"474px"}]', 'loading="lazy"' -%}
         <script type="application/json" class="w-json">{"items":[{"url":"https://youtube.com/watch?v=sIvXXJEa4TA&autoplay=1?rel=0&showinfo=0","originalUrl":"https://youtube.com/watch?v=sIvXXJEa4TA&autoplay=1?rel=0&showinfo=0","width":940,"height":528,"thumbnailUrl":"https://i.ytimg.com/vi/sIvXXJEa4TA/hqdefault.jpg","html":"<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FsIvXXJEa4TA%3Ffeature%3Doembed%26autoplay%3D1%26showinfo%3D0&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DsIvXXJEa4TA&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FsIvXXJEa4TA%2Fhqdefault.jpg&args=rel%3D0%7Cautoplay%3D1&key=96f1f04c5f4143bcb0f2e68c87d65feb&autoplay=1&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" title=\"YouTube embed\" frameborder=\"0\" allow=\"autoplay; fullscreen\" allowfullscreen=\"true\"></iframe>","type":"video"}],"group":""}</script>
       </a>
-      <a href="{{ links.16bdc17e }}" class="boton w-button">{{ texts.-7c5ffd7b }}</a>
+      <a href="{{ links.-3f05918f }}" class="boton w-button">{{ texts.-7c5ffd7b }}</a>
     </div>
   </div>
   <div id="mantenimiento" class="section-mantenimiento">
     <div class="container w-container">
       <h2 class="heading-2 center">{{ texts.-18947bda }}</h2>
       <p class="paragraph dark medium center">{{ texts.-41c5caa0 }}</p>
-      <a href="{{ links.16bdc17e }}" class="boton w-button">{{ texts.248636a6 }}</a>
+      <a href="{{ links.-3f05918f }}" class="boton w-button">{{ texts.248636a6 }}</a>
     </div>
   </div>
-  {%- include "partials/footer" -%}
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
+  <div class="footer">
+    <div class="row w-row">
+      <div class="column w-col w-col-4">
+        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+          <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
+        </div>
+      </div>
+      <div class="w-col w-col-3">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.-6beb6ac0 }}</div>
+          <a href="{{ links.-824a8b9 }}" class="link-footer">{{ texts.6451f65d }}</a>
+          <a href="{{ links.66a76574 }}" aria-current="page" class="link-footer w--current">{{ texts.3eda8ca }}</a>
+          <a href="{{ links.-5c8c85ba }}" class="link-footer">{{ texts.37bce494 }}</a>
+          <a href="{{ links.-32cd245 }}" class="link-footer">{{ texts.-1dca6e3f }}</a>
+          <a href="{{ links.-343edc94 }}" class="link-footer">{{ texts.68fb3ac9 }}</a>
+          <a href="{{ links.-4a5cfeee }}" class="link-footer">{{ texts.-48d59d5c }}</a>
+          <a href="{{ links.519f0497 }}" class="link-footer">{{ texts.-797026b7 }}</a>
+          <a href="{{ links.44597e49 }}" class="link-footer">{{ texts.-18947bda }}</a>
+        </div>
+      </div>
+      <div class="w-col w-col-5">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.5401f5bf }}</div>
+          <a href="{{ links.768ad3ac }}" class="link-footer-telefono">{{ texts.-70c0b1fd }}</a>
+          <div class="text-block-1">{{ texts.7708558d }}</div>
+          <a href="{{ links.3ce9a87c }}" class="link-footer-telefono">{{ texts.16679d29 }}</a>
+          <div class="text-block-1">{{ texts.78bcd6e2 }}</div>
+          <a href="{{ links.23 }}" class="link-footer">{{ texts.-ed7a307 }}</a>
+          <a href="{{ links.-4886a790 }}" target="_blank" rel="noreferrer" class="link-footer small-underline">{{ texts.-6e2fc850 }}</a>
+        </div>
+      </div>
+    </div>
+    <div class="div-text-footer-rr">
+      <div class="text-footer-rr">{{ texts.-50284710 }}</div>
+      <a href="{{ links.-b70c173 }}" rel="noopener" target="_blank" class="text-footer-rr">{{ texts.-2df564eb }}</a>
+    </div>
+    <div class="div-footer-boton">
+      <a href="{{ links.-3f05918f }}" class="contacto">{{ texts.-1df83b91 }}</a>
+    </div>
+  </div>
+  <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 
 <script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
