--- a/theme/fibra-de-vidrio/diseno-medida.html
+++ b/theme/fibra-de-vidrio/diseno-medida.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f36be8114c96" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
+<html data-wf-page="609b09e44168f36be8114c96" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
   <meta charset="utf-8">
-  
-  
-  
-  
-  
-  
-  
-  
+  <title>Diseño a la medida en fibra de vidrio</title>
+  <meta content="Fabricamos cualquier tipo de forma, tamaño, color y características de piezas. Nos adaptamos a tus necesidades de fabricación en fibra de vidrio. ¡Somos fabricantes en fibra de vidrio!" name="description">
+  <meta content="Diseño a la medida en fibra de vidrio" property="og:title">
+  <meta content="Fabricamos cualquier tipo de forma, tamaño, color y características de piezas. Nos adaptamos a tus necesidades de fabricación en fibra de vidrio. ¡Somos fabricantes en fibra de vidrio!" property="og:description">
+  <meta content="Diseño a la medida en fibra de vidrio" property="twitter:title">
+  <meta content="Fabricamos cualquier tipo de forma, tamaño, color y características de piezas. Nos adaptamos a tus necesidades de fabricación en fibra de vidrio. ¡Somos fabricantes en fibra de vidrio!" property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/europisos-v2-8242e23c56fba3ffb7fa403b06.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.png" }}" rel="shortcut icon" type="image/x-icon">
   <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.png" }}" rel="apple-touch-icon">
@@ -41,16 +42,99 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         vertical-align: middle;
         display: inline-block; }</style></head>
 <body>
-  {%- include "partials/menu" -%}
-  {%- include "partials/menu-fibra-de-vidrio" -%}
-  <div class="wf-section">
+  <div class="menu">
+    <div class="w-embed w-iframe">
+      <!--  Google Tag Manager (noscript)  -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!--  End Google Tag Manager (noscript)  -->
+    </div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+      <div class="div-block-12">
+        <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
+        </a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <div class="div-block-13">
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.-824a8b9 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.6451f65d }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.3d2ce2b8 }}" class="dropdown-link w-dropdown-link">{{ texts.6176fac4 }}</a>
+                <a href="{{ links.-47a2312a }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-5f7c817c }}" class="dropdown-link w-dropdown-link">{{ texts.37bce494 }}</a>
+                <a href="{{ links.-33d9e40b }}" class="dropdown-link w-dropdown-link">{{ texts.46cbae7 }}</a>
+                <a href="{{ links.7700ae4e }}" class="dropdown-link w-dropdown-link">{{ texts.-339acbad }}</a>
+                <a href="{{ links.-3ef94968 }}" class="dropdown-link w-dropdown-link">{{ texts.-18947bda }}</a>
+              </nav>
+            </div>
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.66a76574 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.3eda8ca }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.-637fe9a4 }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-4e232277 }}" class="dropdown-link w-dropdown-link">{{ texts.3cfcd46 }}</a>
+                <a href="{{ links.380712 }}" class="dropdown-link w-dropdown-link">{{ texts.33226165 }}</a>
+                <a href="{{ links.60fec55c }}" class="dropdown-link w-dropdown-link">{{ texts.-7cd47973 }}</a>
+              </nav>
+            </div>
+            <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
+            <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
+            <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
+            <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
+            <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+          </div>
+          <div class="nav-menu-right">
+            <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
+            <a href="{{ links.768ad3ac }}" class="telefono">{{ texts.-70c0b1fd }}</a>
+          </div>
+        </nav>
+        <div class="menu-button w-nav-button">
+          <div class="con-menu-servicios">
+            <div>{{ texts.-657ae5c3 }}</div>
+            <div class="icon-4 w-icon-nav-menu"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div data-collapse="none" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-3 w-nav">
+    <div class="container-3 w-container">
+      <nav role="navigation" class="nav-menu-2 w-nav-menu">
+        <div class="div-block-18">
+          <a href="{{ links.3c7fdf2c }}" class="nav-link fibra w-nav-link">{{ texts.38c07af3 }}</a>
+          <a href="{{ links.2ab40857 }}" class="nav-link fibra w-nav-link">{{ texts.6bdf2a3d }}</a>
+          <a href="{{ links.-2871cffe }}" class="nav-link fibra w-nav-link">{{ texts.57822033 }}</a>
+        </div>
+        <div>
+          <a href="{{ links.-6164a4a }}" class="contacto-fibra">{{ texts.229e3429 }}</a>
+        </div>
+      </nav>
+      <div class="menu-button-2 w-nav-button">
+        <div class="icon-5 w-icon-nav-menu"></div>
+      </div>
+      <a href="{{ links.-5c8c85ba }}" class="brand-2 w-nav-brand">
+        <div class="logo-fibra micro">{{ texts.1997a4c9 }}</div>
+        <div class="logo-fibra">{{ texts.3fc9e4e }}</div>
+        <div class="logo-fibra small">{{ texts.8a93c66 }}</div>
+      </a>
+    </div>
+  </div>
+  <div>
     <div class="div-center header-vertical">
       <div class="w-layout-grid">
         <div id="w-node-f182725b-7776-3c11-d8bd-59c6329d8e22-e8114c96" class="div-block-16 vertical-full-width">
           <h1 class="heading-2 center">{{ texts.-4ee4f0e7 }}</h1>
           <p class="paragraph dark medium center">{{ texts.-6503cab5 }}<br>{{ texts.-1522c8cf }}</p>
           <p class="paragraph dark medium center">{{ texts.-70e87127 }}</p>
-          <a href="{{ links.20d5fd99 }}" class="boton-naranja min-300 w-button">{{ texts.46d7d800 }}</a>
+          <a href="{{ links.-6164a4a }}" class="boton-naranja min-300 w-button">{{ texts.46d7d800 }}</a>
           <a href="{{ links.-41af5612 }}" class="boton-naranja min-300-gris w-button">{{ texts.2e75ac0 }}</a>
         </div>
         <div id="w-node-_4c43d220-f9cf-ba31-1bd8-0d7cda6d2486-e8114c96" class="div-block-16 vertical-full-width">
@@ -73,10 +157,144 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  {%- include "partials/productos-fibra-seccion-interior" -%}
-  {%- include "partials/footer" -%}
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
+  <div id="productos" class="section-productos-fibra">
+    <div class="container-center-90-width">
+      <div class="div-block-16 vertical">
+        <h2 class="heading-2 center">{{ texts.-7b45329e }}</h2>
+        <p class="paragraph dark medium center">{{ texts.16abf1cd }}</p>
+      </div>
+      <div class="contenedor-divs-proyectos">
+        <div class="contenedor-proyecto">
+          <div class="acceso-proyecto">
+            <a href="{{ links.293566d7 }}" class="link-block-cuadrado-full-width w-inline-block">
+              <div class="div-imagen-menu celosia"></div>
+            </a>
+            <div class="contenedor-divs-proyectos">
+              <h3 class="h3 subtitulo">{{ texts.772c9f24 }}</h3>
+              <a href="{{ links.293566d7 }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+            </div>
+          </div>
+          <div class="acceso-proyecto">
+            <a href="{{ links.-63ec2268 }}" class="link-block-cuadrado-full-width w-inline-block">
+              <div class="div-imagen-menu pergolasyfibra"></div>
+            </a>
+            <div class="contenedor-divs-proyectos">
+              <h3 class="h3 subtitulo">{{ texts.-24cedc67 }}</h3>
+              <a href="{{ links.-63ec2268 }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+            </div>
+          </div>
+        </div>
+        <div class="contenedor-proyecto">
+          <div class="acceso-proyecto">
+            <a href="{{ links.1ed6f8aa }}" aria-current="page" class="link-block-cuadrado-full-width w-inline-block w--current">
+              <div class="div-imagen-menu alamedida _02"></div>
+            </a>
+            <div class="contenedor-divs-proyectos">
+              <h3 class="h3 subtitulo">{{ texts.-4ee4f0e7 }}</h3>
+              <a href="{{ links.1ed6f8aa }}" target="_blank" aria-current="page" class="link-text big-underline w--current">{{ texts.-39baa740 }}</a>
+            </div>
+          </div>
+          <div class="acceso-proyecto">
+            <a href="{{ links.77431de5 }}" class="link-block-cuadrado-full-width w-inline-block">
+              <div class="div-imagen-menu alamedida"></div>
+            </a>
+            <div class="contenedor-divs-proyectos">
+              <h3 class="h3 subtitulo">{{ texts.-97ab69f }}</h3>
+              <a href="{{ links.77431de5 }}" class="link-text big-underline">{{ texts.-39baa740 }}</a>
+            </div>
+          </div>
+          <div class="acceso-proyecto">
+            <a href="{{ links.-2387e078 }}" class="link-block-cuadrado-full-width w-inline-block">
+              <div class="div-imagen-menu mobiliario"></div>
+            </a>
+            <div class="contenedor-divs-proyectos">
+              <h3 class="h3 subtitulo">{{ texts.-75a8523 }}</h3>
+              <a href="{{ links.-2387e078 }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="servicios-fibra" class="div-block-servicios-contenedor">
+        <h2 id="servicios-fibra" class="heading-2 center serviciosfibra">{{ texts.272fb5d8 }}</h2>
+        <div class="div-block-servicios">
+          <div class="div-30percent-vertical-fibra justify-center-servicios">
+            <a href="{{ links.-824a8b9 }}" class="link-block-cuadrado-full-width w-inline-block"></a>
+            <h3 class="h3">{{ texts.4c2ae9e0 }}</h3>
+            <p class="paragraph dark small center">{{ texts.9b5b4b8 }}<strong>{{ texts.732a2cb4 }}</strong>{{ texts.14832bba }}</p>
+            <a href="{{ links.-6164a4a }}" class="boton-naranja w-button">{{ texts.2599486f }}</a>
+            <div class="div-center-vertical"></div>
+          </div>
+          <div class="div-30percent-vertical-fibra justify-center-servicios">
+            <a href="{{ links.-824a8b9 }}" class="link-block-cuadrado-full-width w-inline-block"></a>
+            <h3 class="h3">{{ texts.-6bc47ee }}</h3>
+            <p class="paragraph dark small center">{{ texts.-4bcf5acb }}<strong>{{ texts.-de49614 }}</strong>{{ texts.5fc8e75c }}</p>
+            <a href="{{ links.-6164a4a }}" class="boton-naranja w-button">{{ texts.2599486f }}</a>
+            <div class="div-center-vertical"></div>
+          </div>
+          <div class="div-30percent-vertical-fibra justify-center-servicios">
+            <a href="{{ links.-824a8b9 }}" class="link-block-cuadrado-full-width w-inline-block"></a>
+            <h3 class="h3">{{ texts.-1d66d1cf }}</h3>
+            <p class="paragraph dark small center">{{ texts.-33880aa2 }}<strong>{{ texts.5151d566 }}</strong></p>
+            <a href="{{ links.-6164a4a }}" class="boton-naranja w-button">{{ texts.2599486f }}</a>
+            <div class="div-center-vertical"></div>
+          </div>
+          <div class="div-30percent-vertical-fibra justify-center-servicios">
+            <a href="{{ links.-824a8b9 }}" class="link-block-cuadrado-full-width w-inline-block"></a>
+            <h3 class="h3">{{ texts.-69f3c74d }}</h3>
+            <p class="paragraph dark small center">{{ texts.7af6bfc5 }}<strong>{{ texts.732a2cb4 }}</strong>{{ texts.2e }}</p>
+            <a href="{{ links.-6164a4a }}" class="boton-naranja w-button">{{ texts.2599486f }}</a>
+            <div class="div-center-vertical"></div>
+          </div>
+        </div>
+      </div>
+      <div class="div-center vertical vertical-center-contacto">
+        <div class="logo-fibra micro">{{ texts.668c7f5d }}</div>{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120"' -%}
+        <a href="{{ links.-6164a4a }}" class="boton-naranja min-300-copy w-button">{{ texts.46d7d800 }}</a>
+        <a href="{{ links.23 }}" class="boton-naranja min-300-gris w-button">{{ texts.2e75ac0 }}</a>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <div class="row w-row">
+      <div class="column w-col w-col-4">
+        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+          <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
+        </div>
+      </div>
+      <div class="w-col w-col-3">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.-6beb6ac0 }}</div>
+          <a href="{{ links.-824a8b9 }}" class="link-footer">{{ texts.6451f65d }}</a>
+          <a href="{{ links.66a76574 }}" class="link-footer">{{ texts.3eda8ca }}</a>
+          <a href="{{ links.-5c8c85ba }}" class="link-footer">{{ texts.37bce494 }}</a>
+          <a href="{{ links.-32cd245 }}" class="link-footer">{{ texts.-1dca6e3f }}</a>
+          <a href="{{ links.-343edc94 }}" class="link-footer">{{ texts.68fb3ac9 }}</a>
+          <a href="{{ links.-4a5cfeee }}" class="link-footer">{{ texts.-48d59d5c }}</a>
+          <a href="{{ links.519f0497 }}" class="link-footer">{{ texts.-797026b7 }}</a>
+          <a href="{{ links.44597e49 }}" class="link-footer">{{ texts.-18947bda }}</a>
+        </div>
+      </div>
+      <div class="w-col w-col-5">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.5401f5bf }}</div>
+          <a href="{{ links.768ad3ac }}" class="link-footer-telefono">{{ texts.-70c0b1fd }}</a>
+          <div class="text-block-1">{{ texts.7708558d }}</div>
+          <a href="{{ links.3ce9a87c }}" class="link-footer-telefono">{{ texts.16679d29 }}</a>
+          <div class="text-block-1">{{ texts.78bcd6e2 }}</div>
+          <a href="{{ links.23 }}" class="link-footer">{{ texts.-ed7a307 }}</a>
+          <a href="{{ links.-4886a790 }}" target="_blank" rel="noreferrer" class="link-footer small-underline">{{ texts.-6e2fc850 }}</a>
+        </div>
+      </div>
+    </div>
+    <div class="div-text-footer-rr">
+      <div class="text-footer-rr">{{ texts.-50284710 }}</div>
+      <a href="{{ links.-b70c173 }}" rel="noopener" target="_blank" class="text-footer-rr">{{ texts.-2df564eb }}</a>
+    </div>
+    <div class="div-footer-boton">
+      <a href="{{ links.-3f05918f }}" class="contacto">{{ texts.-1df83b91 }}</a>
+    </div>
+  </div>
+  <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 
 <script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
