--- a/theme/techos-y-cubiertas-para-pergolas.html
+++ b/theme/techos-y-cubiertas-para-pergolas.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f35adc114ca7" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
+<html data-wf-page="609b09e44168f35adc114ca7" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
   <meta charset="utf-8">
-  
-  
-  
-  
-  
-  
-  
-  
+  <title>Techos y cubiertas para pérgolas</title>
+  <meta content="¿Buscas una cubierta o techo para tu pérgola y terraza? Diferentes materiales para pérgolas: Policarbonato, Vidrio templado, Lona, Tela, Encapsulado Ixtle." name="description">
+  <meta content="Techos y cubiertas para pérgolas" property="og:title">
+  <meta content="¿Buscas una cubierta o techo para tu pérgola y terraza? Diferentes materiales para pérgolas: Policarbonato, Vidrio templado, Lona, Tela, Encapsulado Ixtle." property="og:description">
+  <meta content="Techos y cubiertas para pérgolas" property="twitter:title">
+  <meta content="¿Buscas una cubierta o techo para tu pérgola y terraza? Diferentes materiales para pérgolas: Policarbonato, Vidrio templado, Lona, Tela, Encapsulado Ixtle." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/europisos-v2-8242e23c56fba3ffb7fa403b06.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.png" }}" rel="shortcut icon" type="image/x-icon">
   <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.png" }}" rel="apple-touch-icon">
@@ -42,13 +43,78 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         vertical-align: middle;
         display: inline-block; }</style></head>
 <body>
-  {%- include "partials/menu" -%}
-  <div id="decksdemadera" class="section-techos-y-cubiertas-pagina wf-section">{%- image images.2ebec603.url, images.2ebec603.alt, '[{"max":10000,"size":"161px"}]', 'width="161"' -%}
+  <div class="menu">
+    <div class="w-embed w-iframe">
+      <!--  Google Tag Manager (noscript)  -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!--  End Google Tag Manager (noscript)  -->
+    </div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+      <div class="div-block-12">
+        <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
+        </a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <div class="div-block-13">
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.-824a8b9 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.6451f65d }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.3d2ce2b8 }}" class="dropdown-link w-dropdown-link">{{ texts.6176fac4 }}</a>
+                <a href="{{ links.-47a2312a }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-5f7c817c }}" class="dropdown-link w-dropdown-link">{{ texts.37bce494 }}</a>
+                <a href="{{ links.-33d9e40b }}" class="dropdown-link w-dropdown-link">{{ texts.46cbae7 }}</a>
+                <a href="{{ links.7700ae4e }}" aria-current="page" class="dropdown-link w-dropdown-link w--current">{{ texts.-339acbad }}</a>
+                <a href="{{ links.-3ef94968 }}" class="dropdown-link w-dropdown-link">{{ texts.-18947bda }}</a>
+              </nav>
+            </div>
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.66a76574 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.3eda8ca }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
+              </div>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.-637fe9a4 }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-4e232277 }}" class="dropdown-link w-dropdown-link">{{ texts.3cfcd46 }}</a>
+                <a href="{{ links.380712 }}" class="dropdown-link w-dropdown-link">{{ texts.33226165 }}</a>
+                <a href="{{ links.60fec55c }}" class="dropdown-link w-dropdown-link">{{ texts.-7cd47973 }}</a>
+              </nav>
+            </div>
+            <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
+            <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
+            <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
+            <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
+            <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+          </div>
+          <div class="nav-menu-right">
+            <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
+            <a href="{{ links.768ad3ac }}" class="telefono">{{ texts.-70c0b1fd }}</a>
+          </div>
+        </nav>
+        <div class="menu-button w-nav-button">
+          <div class="con-menu-servicios">
+            <div>{{ texts.-657ae5c3 }}</div>
+            <div class="icon-4 w-icon-nav-menu"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="decksdemadera" class="section-techos-y-cubiertas-pagina">{%- image images.2ebec603.url, images.2ebec603.alt, '[{"max":10000,"size":"161px"}]', 'width="161"' -%}
     <div class="container-center w-container">
       <h1 class="heading-h1 center">{{ texts.-4e95ba90 }}</h1>
       <p class="paragraph dark big center">{{ texts.-63e9c0fa }}</p>
       <p class="paragraph dark medium center">{{ texts.-3084597 }}</p>
-      {%- include "partials/galeria-techos" -%}
+      <a href="{{ links.23 }}" class="link-lightbox w-inline-block w-lightbox">
+        <p class="link-text big-underline">{{ texts.-14111ca }}</p>
+        <script type="application/json" class="w-json">{"items":[{"_id":"5d89102d3c25cec97c2d22a7","origFileName":"TYE1.jpg","fileName":"TYE1.jpg","fileSize":68322,"height":780,"url":"/assets/images/tye1.jpg","width":1040,"type":"image"},{"_id":"5d8910213c25ce39332d21ae","origFileName":"TYE2.jpg","fileName":"TYE2.jpg","fileSize":294528,"height":1349,"url":"/assets/images/tye2.jpg","width":1349,"type":"image"},{"_id":"5d891016636c943eda54868f","origFileName":"TYE3.jpg","fileName":"TYE3.jpg","fileSize":132641,"height":1013,"url":"/assets/images/tye3.jpg","width":1350,"type":"image"},{"_id":"5d89100b307e5569ecf2840f","origFileName":"TYE4.jpg","fileName":"TYE4.jpg","fileSize":178767,"height":1349,"url":"/assets/images/tye4.jpg","width":1349,"type":"image"},{"_id":"5d890ffdcbb73805530f4b48","origFileName":"TYE5.jpg","fileName":"TYE5.jpg","fileSize":123234,"height":768,"url":"/assets/images/tye5.jpg","width":1024,"type":"image"},{"_id":"5d890ff090cc7f1cf60438d4","origFileName":"TYE6.jpg","fileName":"TYE6.jpg","fileSize":123766,"height":1350,"url":"/assets/images/tye6.jpg","width":1350,"type":"image"},{"_id":"5d890fe3cbb738de620f4b0c","origFileName":"TYE7.jpg","fileName":"TYE7.jpg","fileSize":111212,"height":960,"url":"/assets/images/tye7.jpg","width":1280,"type":"image"},{"_id":"5d890fd990cc7fce7c0436e3","origFileName":"TYE8.jpg","fileName":"TYE8.jpg","fileSize":108874,"height":960,"url":"/assets/images/tye8.jpg","width":1280,"type":"image"},{"_id":"5d890fca2748c7910f3d7ad3","origFileName":"TYE9.jpg","fileName":"TYE9.jpg","fileSize":198719,"height":1349,"url":"/assets/images/tye9.jpg","width":1349,"type":"image"}],"group":""}</script>
+      </a>
     </div>
     <div class="div-container"></div>
   </div>
@@ -99,7 +165,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div id="encapsuladoixtle" class="section-ixtle wf-section">
+  <div id="encapsuladoixtle" class="section-ixtle">
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.-192cf145 }}</h2>
       <div class="image-thumbnail-redondo ixtle"></div>
@@ -131,7 +197,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div id="encapsulados" class="section-encapsulados wf-section">
+  <div id="encapsulados" class="section-encapsulados">
     <div class="div-container">
       <div class="image-thumbnail-redondo encapsulado"></div>{%- image images.-27bd18ad.url, images.-27bd18ad.alt, '[{"max":479,"size":"100vw"},{"max":767,"size":"97vw"},{"max":979,"size":"98vw"},{"max":10000,"size":"960px"}]', 'class="imagen-techos"' -%}
       <h2 class="heading-2 center">{{ texts.2dad06fd }}</h2>
@@ -155,7 +221,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div id="policarbonato" class="section-policarbonato wf-section">
+  <div id="policarbonato" class="section-policarbonato">
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.-5686ec5 }}</h2>
       <div class="image-thumbnail-redondo policarbonato"></div>
@@ -177,7 +243,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div id="vidriotemplado" class="section-policarbonato wf-section">
+  <div id="vidriotemplado" class="section-policarbonato">
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.-14890b6b }}</h2>
       <div class="image-thumbnail-redondo vidriotemplado"></div>
@@ -197,7 +263,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div id="lona" class="section-techo-tela wf-section">
+  <div id="lona" class="section-techo-tela">
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.-2f782cf7 }}</h2>
       <div class="image-thumbnail-redondo tela"></div>
@@ -216,7 +282,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div class="section-pergolas wf-section">
+  <div class="section-pergolas">
     <div class="w-container">
       <h2 class="heading-2 center">{{ texts.745648e1 }}</h2>
       <div class="divisor-30px"></div>
@@ -230,7 +296,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <a href="{{ links.-6e365694 }}" class="link-block-2 w-inline-block">
             <h3 class="h3">{{ texts.323119e8 }}</h3>
           </a>
-          <a target="_blank" href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
+          <a target="_blank" href="{{ links.-824a8b9 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
         </div>
       </div>
       <div class="div-33percent-pergolas">
@@ -241,7 +307,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <a href="{{ links.23 }}" class="link-block-2 w-inline-block">
             <h3 class="h3">{{ texts.-6606db80 }}</h3>
           </a>
-          <a target="_blank" href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
+          <a target="_blank" href="{{ links.-824a8b9 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
         </div>
       </div>
       <div class="div-33percent-pergolas">
@@ -252,7 +318,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <a href="{{ links.23 }}" class="link-block-2 w-inline-block">
             <h3 class="h3">{{ texts.-6f73ca48 }}</h3>
           </a>
-          <a target="_blank" href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
+          <a target="_blank" href="{{ links.-824a8b9 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
         </div>
       </div>
       <div class="div-33percent-pergolas">
@@ -263,14 +329,52 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <a href="{{ links.23 }}" class="link-block-2 w-inline-block">
             <h3 class="h3">{{ texts.7054690b }}</h3>
           </a>
-          <a target="_blank" href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
+          <a target="_blank" href="{{ links.-824a8b9 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
         </div>
       </div>
     </div>
   </div>
-  {%- include "partials/footer" -%}
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
+  <div class="footer">
+    <div class="row w-row">
+      <div class="column w-col w-col-4">
+        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+          <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
+        </div>
+      </div>
+      <div class="w-col w-col-3">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.-6beb6ac0 }}</div>
+          <a href="{{ links.-824a8b9 }}" class="link-footer">{{ texts.6451f65d }}</a>
+          <a href="{{ links.66a76574 }}" class="link-footer">{{ texts.3eda8ca }}</a>
+          <a href="{{ links.-5c8c85ba }}" class="link-footer">{{ texts.37bce494 }}</a>
+          <a href="{{ links.-32cd245 }}" class="link-footer">{{ texts.-1dca6e3f }}</a>
+          <a href="{{ links.-343edc94 }}" class="link-footer">{{ texts.68fb3ac9 }}</a>
+          <a href="{{ links.-4a5cfeee }}" class="link-footer">{{ texts.-48d59d5c }}</a>
+          <a href="{{ links.519f0497 }}" class="link-footer">{{ texts.-797026b7 }}</a>
+          <a href="{{ links.44597e49 }}" class="link-footer">{{ texts.-18947bda }}</a>
+        </div>
+      </div>
+      <div class="w-col w-col-5">
+        <div class="div-block-2">
+          <div class="text-block-1">{{ texts.5401f5bf }}</div>
+          <a href="{{ links.768ad3ac }}" class="link-footer-telefono">{{ texts.-70c0b1fd }}</a>
+          <div class="text-block-1">{{ texts.7708558d }}</div>
+          <a href="{{ links.3ce9a87c }}" class="link-footer-telefono">{{ texts.16679d29 }}</a>
+          <div class="text-block-1">{{ texts.78bcd6e2 }}</div>
+          <a href="{{ links.23 }}" class="link-footer">{{ texts.-ed7a307 }}</a>
+          <a href="{{ links.-4886a790 }}" target="_blank" rel="noreferrer" class="link-footer small-underline">{{ texts.-6e2fc850 }}</a>
+        </div>
+      </div>
+    </div>
+    <div class="div-text-footer-rr">
+      <div class="text-footer-rr">{{ texts.-50284710 }}</div>
+      <a href="{{ links.-b70c173 }}" rel="noopener" target="_blank" class="text-footer-rr">{{ texts.-2df564eb }}</a>
+    </div>
+    <div class="div-footer-boton">
+      <a href="{{ links.-3f05918f }}" class="contacto">{{ texts.-1df83b91 }}</a>
+    </div>
+  </div>
+  <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 
 <script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
